# cz-ru

./: .cz.toml  CHANGELOG.md  README.md  cz_cz-ru.py  cz_ru.py  cz_ru_info.txt  pyproject.toml  setup.py
